--- a/css/basic.css
+++ b/css/basic.css
@@ -1,17 +1,36 @@
-li {
-  display: inline-block;
-  right: 0;
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
 }
 
-a {
-  display: block;
-  padding: 8px;
-  background-color: #dddddd;
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-ul {
-  background-color: #dddddd;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+/* Right-aligned section inside the top navigation */
+.topnav-right {
+  float: right;
+}
+
+footer{
+  background-color: #333;
 }
