--- a/css/basic.css
+++ b/css/basic.css
@@ -1,11 +1,126 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+header {
+    font-family: 'Roboto';
+}
+
+#logo {
+    margin-right: auto;
+}
+
+.nav-bar {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    background-color: #2F4858;
+    height: auto;
+    justify-content: flex-end;
+}
+
+.nav-button {
+    padding: 1.5vw 2vw 1.5vw 2vw;
+}
+
+.nav-button a {
+    color: #ffffff !important;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main div {
+    margin: 2vw
+}
+
+main h1 {
+    font-family: 'Roboto Condensed';
+    font-weight: 600;
+    font-size: 5vw;
+}
+
+main h2 {
+    font-family: 'Roboto Condensed';
+    font-weight: 600;
+    font-size: 3vw;
+}
+
+main p {
+    font-family: 'Roboto';
+    padding: 0.5vw 0 0.5vw 0;
+}
+
+#lp-headline {
+    display: flex;
+    flex-direction: row;
+}
+
+#lp-headline-text {
+    width: 50%;
+    margin-right: auto;
+}
+
+#lp-headline-media {
+    margin-right: auto;
+}
+
+#lp-headline-media img {
+    width: 25vw;
+}
+
+#lp-headline-cta {
+    margin-top: 1vw;
+    padding: 0.5vw 0.4vw 0.5vw 0.4vw;
+    width: 9vw;
+    font-weight: bold;
+    font-family: 'Roboto';
+    font-size: 1vw;
+}
+
 #rss-logo-insta {
-    width: 80px;
+
 }
 
 #rss-logo-linkedin {
-    width: 59px;
+
 }
 
 footer {
-    display: inline-block;
+    font-family: 'Roboto';
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #000000;
+    color: #ffffff;
+}
+
+footer div {
+    padding: 1.5vw 2vw 1.5vw 2vw;
+}
+
+#footer-menu {
+    font-family: 'Roboto Condensed';
+    font-size: 2.5vw;
+    display: flex;
+    flex-direction: column;
+}
+
+#footer-menu a {
+    color: #ffffff;
 }
